--- a/CloudVision-Pt/pytorch-computer-vision.ipynb
+++ b/CloudVision-Pt/pytorch-computer-vision.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "658839a6",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c6a65825",
    "metadata": {},
    "outputs": [
@@ -260,96 +260,96 @@
      "data": {
       "text/plain": [
        "tensor([[0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.4510, 0.4431, 0.3804, 0.2863, 0.2471, 0.4627, 0.3490, 0.2549, 0.3490,\n",
-       "         0.5020, 0.2235, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0118, 0.0000, 0.0000, 0.3451, 0.3922, 0.3882, 0.4549, 0.0118, 0.0000,\n",
+       "         0.0000, 0.0039, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0078, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.5098, 1.0000, 0.8196, 0.8078, 0.9098, 1.0000,\n",
+       "         0.1255, 0.0000, 0.0000, 0.0000, 0.0039, 0.0000, 0.0000, 0.0000, 0.0000,\n",
        "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.5647, 0.4941, 0.4314, 0.2863, 0.2863, 0.4824, 0.3882, 0.3490,\n",
-       "         0.4000, 0.5020, 0.3686, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.2039, 0.6000, 0.9020, 0.8706, 0.8353, 0.7255, 0.8784,\n",
+       "         0.8588, 0.9059, 0.3529, 0.0745, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
        "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.5765, 0.2980, 0.2863, 0.3294, 0.3059, 0.4627, 0.2745,\n",
-       "         0.3294, 0.2471, 0.4314, 0.4118, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.4706, 0.7686, 0.8549, 0.8549, 0.7647, 0.7725, 0.9843, 1.0000,\n",
+       "         0.9608, 0.7333, 0.7725, 0.8392, 0.8275, 0.8196, 0.1922, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0039,\n",
+       "         0.0000, 0.5098, 0.9020, 0.7765, 0.7216, 0.6902, 0.8235, 0.8157, 0.8510,\n",
+       "         1.0000, 0.8235, 0.7765, 0.8471, 0.8118, 0.7412, 0.8275, 0.8706, 0.0784,\n",
+       "         0.0000, 0.0039, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.7569, 0.7725, 0.6980, 0.7843, 0.7255, 0.6902, 0.6627,\n",
+       "         0.8706, 0.9098, 0.8863, 0.7137, 0.8157, 0.7608, 0.6980, 0.7647, 0.8667,\n",
+       "         0.5725, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0824, 0.8353, 0.8000, 0.7137, 0.8431, 0.6824, 0.7176,\n",
+       "         0.7647, 0.8118, 0.8314, 0.8314, 0.7451, 0.6667, 0.6588, 0.7020, 0.8039,\n",
+       "         0.8745, 0.8039, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.1608, 0.8431, 0.8510, 0.7569, 0.7569, 0.7569,\n",
+       "         0.7882, 0.7608, 0.8118, 0.8275, 0.8078, 0.7059, 0.6941, 0.7961, 0.7412,\n",
+       "         0.8314, 0.8627, 0.8471, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.2863, 0.8627, 0.8980, 0.7412, 0.7647,\n",
+       "         0.7608, 0.7216, 0.6980, 0.8118, 0.8039, 0.8078, 0.8314, 0.8118, 0.8039,\n",
+       "         0.7647, 0.9098, 0.8078, 0.9059, 0.0392, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.3882, 0.8588, 0.9216, 0.7608,\n",
+       "         0.7216, 0.7608, 0.6863, 0.6588, 0.7804, 0.7882, 0.8196, 0.8078, 0.7333,\n",
+       "         0.6824, 0.7529, 0.9765, 0.7882, 0.8235, 0.1373, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.5059, 0.8471, 0.9176,\n",
+       "         0.7843, 0.7059, 0.7569, 0.7529, 0.7608, 0.7765, 0.8353, 0.7843, 0.8000,\n",
+       "         0.7490, 0.6431, 0.7137, 1.0000, 0.8157, 0.8392, 0.2549, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.5922, 0.8196,\n",
+       "         0.9059, 0.8392, 0.7451, 0.7725, 0.7686, 0.7686, 0.8078, 0.8196, 0.7843,\n",
+       "         0.7961, 0.8118, 0.7765, 0.7137, 1.0000, 0.7961, 0.7961, 0.4000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.6549,\n",
+       "         0.7922, 0.8706, 0.8627, 0.6706, 0.6863, 0.7961, 0.7490, 0.7451, 0.7922,\n",
+       "         0.8235, 0.8118, 0.8000, 0.8431, 0.7373, 1.0000, 0.7804, 0.7843, 0.4863,\n",
        "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.5451, 0.3176, 0.3176, 0.3373, 0.3294, 0.3294,\n",
-       "         0.2667, 0.3490, 0.2745, 0.3804, 0.4824, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.5529, 0.3373, 0.3059, 0.2980, 0.3686,\n",
-       "         0.3176, 0.2863, 0.3059, 0.3294, 0.3804, 0.4627, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.6157, 0.3686, 0.2863, 0.3373,\n",
-       "         0.4000, 0.3686, 0.4118, 0.3490, 0.2667, 0.4627, 0.4431, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.6078, 0.4000, 0.3373,\n",
-       "         0.4510, 0.4824, 0.4196, 0.5137, 0.4824, 0.3294, 0.4941, 0.3882, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.5451, 0.4824,\n",
-       "         0.2863, 0.3490, 0.4314, 0.4314, 0.4314, 0.4196, 0.3373, 0.5529, 0.4118,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.4941,\n",
-       "         0.5765, 0.3490, 0.4706, 0.6275, 0.6353, 0.3882, 0.4196, 0.2745, 0.6902,\n",
-       "         0.2980, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.3882, 0.6471, 0.3608, 0.4000, 0.5843, 0.6667, 0.4431, 0.4314, 0.3176,\n",
-       "         0.7216, 0.1333, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.2235, 0.7216, 0.3059, 0.4706, 0.5647, 0.4196, 0.5451, 0.4196,\n",
-       "         0.3686, 0.7412, 0.0510, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.1529, 0.8039, 0.3176, 0.4627, 0.5529, 0.3686, 0.5961,\n",
-       "         0.4196, 0.4314, 0.7608, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.8118, 0.4118, 0.4706, 0.5020, 0.3882,\n",
-       "         0.6784, 0.3882, 0.5137, 0.7490, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.7216, 0.5020, 0.5333, 0.4824,\n",
-       "         0.3373, 0.8039, 0.3490, 0.5765, 0.6157, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.7294, 0.5451, 0.5961,\n",
-       "         0.4510, 0.1843, 0.8549, 0.4510, 0.6588, 0.4314, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.6471, 0.5765,\n",
-       "         0.6353, 0.4431, 0.0902, 0.8941, 0.5020, 0.6902, 0.2667, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.5961,\n",
-       "         0.5961, 0.6471, 0.4196, 0.0392, 1.0000, 0.5333, 0.7294, 0.0510, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.5137, 0.6980, 0.6471, 0.4510, 0.0000, 0.9882, 0.5647, 0.7412, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.4941, 0.7412, 0.7098, 0.4941, 0.0588, 0.8745, 0.5451, 0.7294,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.4824, 0.7294, 0.6902, 0.4824, 0.1922, 0.8627, 0.5333,\n",
-       "         0.7412, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.3490, 0.7922, 0.6784, 0.5255, 0.3176, 0.7922,\n",
-       "         0.6078, 0.7098, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.2549, 0.7490, 0.6588, 0.5843, 0.4196,\n",
-       "         0.7098, 0.6784, 0.6588, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.1647, 0.8118, 0.5843, 0.6275,\n",
-       "         0.3490, 0.6275, 0.6980, 0.6588, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0588, 0.7922, 0.6353,\n",
-       "         0.5137, 0.3686, 0.6157, 0.8118, 0.4941, 0.0000, 0.0078, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0275, 0.7922,\n",
-       "         0.6471, 0.5137, 0.4431, 0.6588, 0.8431, 0.2745, 0.0000, 0.0196, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.7098, 0.7216, 0.4431, 0.4314, 0.7412, 0.8235, 0.1020, 0.0000, 0.0078,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.6588, 0.7490, 0.4706, 0.5137, 0.7725, 0.7725, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "         0.0000, 0.0000, 0.5255, 0.8431, 0.3608, 0.1098, 0.8431, 0.6471, 0.0000,\n",
-       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.6863, 0.8588, 0.8627, 0.8471, 0.6431, 0.7098, 0.7216, 0.6745, 0.7686,\n",
+       "         0.8157, 0.7569, 0.6941, 0.7686, 0.8039, 0.6706, 1.0000, 0.8118, 0.7882,\n",
+       "         0.5412, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.7255, 0.8824, 0.8745, 0.8039, 0.7255, 0.7490, 0.6549, 0.6824,\n",
+       "         0.7804, 0.7961, 0.7686, 0.6980, 0.7451, 0.7176, 0.7373, 1.0000, 0.8275,\n",
+       "         0.7804, 0.6706, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.8196, 0.8863, 0.8588, 0.9294, 0.7490, 0.6627, 0.7608,\n",
+       "         0.8000, 0.8588, 0.6588, 0.8157, 0.7882, 0.6471, 0.6941, 0.7725, 1.0000,\n",
+       "         0.8235, 0.8275, 0.7765, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.8471, 0.8902, 0.8627, 0.9216, 0.7451, 0.7804,\n",
+       "         0.7725, 0.7725, 0.8627, 0.7843, 0.8118, 0.6941, 0.7333, 0.8275, 0.7725,\n",
+       "         0.9961, 0.8275, 0.8118, 0.7922, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.8549, 0.8863, 0.8510, 0.8784, 0.7569,\n",
+       "         0.7333, 0.7059, 0.6745, 0.8039, 0.8275, 0.8039, 0.8588, 0.7843, 0.8078,\n",
+       "         0.7961, 0.9725, 0.7961, 0.8000, 0.9137, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.8627, 0.8863, 0.8667, 0.9059,\n",
+       "         0.7804, 0.7608, 0.6863, 0.6706, 0.7765, 0.8039, 0.7843, 0.7922, 0.7294,\n",
+       "         0.7176, 0.7804, 0.8627, 0.8392, 0.8118, 0.9569, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0353, 0.8902, 0.8784, 0.8941,\n",
+       "         0.8902, 0.7373, 0.7765, 0.7843, 0.7569, 0.8471, 0.8235, 0.8235, 0.8235,\n",
+       "         0.7098, 0.6941, 0.7922, 0.6431, 0.9294, 0.8078, 0.9647, 0.1020, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.1569, 0.8784, 0.8275,\n",
+       "         0.9373, 0.7490, 0.8078, 0.7725, 0.8196, 0.8471, 0.8667, 0.8549, 0.7922,\n",
+       "         0.8667, 0.8078, 0.7255, 0.8471, 0.5490, 0.9961, 0.7569, 0.8863, 0.2000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.2235, 0.8902,\n",
+       "         0.8039, 0.9843, 0.6745, 0.7608, 0.7020, 0.9020, 0.8078, 0.8000, 0.8000,\n",
+       "         0.8863, 0.8627, 0.8588, 0.8039, 0.8784, 0.4392, 0.9961, 0.7804, 0.8706,\n",
+       "         0.2392, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.2784,\n",
+       "         0.9020, 0.8824, 0.9608, 0.6078, 0.7490, 0.7333, 0.7333, 0.7216, 0.9216,\n",
+       "         0.8196, 0.7686, 0.7098, 0.7882, 0.7765, 0.8745, 0.2784, 0.8980, 0.8588,\n",
+       "         0.8078, 0.3294, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.3725, 0.9137, 0.9255, 0.7765, 0.4863, 0.8863, 0.6627, 0.7333, 0.8196,\n",
+       "         0.8784, 0.7412, 0.7922, 0.7451, 0.7373, 0.6588, 0.9255, 0.2392, 0.8157,\n",
+       "         0.9020, 0.8353, 0.4196, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.4627, 0.8314, 0.9451, 0.5882, 0.5137, 1.0000, 0.8863, 0.8824,\n",
+       "         0.9216, 0.8706, 0.7725, 0.8706, 0.8392, 0.7922, 0.9059, 1.0000, 0.0980,\n",
+       "         0.7765, 0.9137, 0.8314, 0.4039, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.5098, 0.8118, 0.9294, 0.6353, 0.0000, 0.1608, 0.1843,\n",
+       "         0.2196, 0.1137, 0.6510, 0.6706, 0.1608, 0.1490, 0.1255, 0.1608, 0.0902,\n",
+       "         0.0000, 0.7373, 0.9137, 0.8000, 0.4157, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.5882, 0.9020, 0.9882, 0.6314, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.1020, 0.0392, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.5333, 0.9765, 0.8941, 0.6235, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0510, 0.2510, 0.2745, 0.1059, 0.0000,\n",
+       "         0.0157, 0.0118, 0.0039, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0078,\n",
+       "         0.0157, 0.0039, 0.0000, 0.0275, 0.2980, 0.2431, 0.0549, 0.0000, 0.0000,\n",
        "         0.0000]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "6ca44a83",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "9b5d71c5",
    "metadata": {},
    "outputs": [
@@ -423,8 +423,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "71a960c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading helper_functions.py\n",
+      "helper_functions.py downloaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from pathlib import Path\n",
+    "if Path (\"helper_functions.py\").is_file():\n",
+    "    print(\"Importing helper functions from helper_functions.py\")\n",
+    "else :\n",
+    "    print(\"Downloading helper_functions.py\")\n",
+    "    request=requests.get(\"https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/refs/heads/main/helper_functions.py\")\n",
+    "    with open(\"helper_functions.py\", \"wb\") as f:\n",
+    "        f.write(request.content)\n",
+    "        print(\"helper_functions.py downloaded successfully.\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0f222be",
    "metadata": {},
    "outputs": [],
    "source": []
